# cds-apis

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  buf.gen.yaml  buf.work.yaml  buf.yaml  docker-compose.yaml
.github/workflows/: codegen.yaml  deploy-rust-crate.yaml  deploy_typescript_grpcjs.yaml  openapi.yaml
dart/cds-apis/: pubspec.yaml
dart/cds-apis/lib/: cds_apis.dart
dart/cds-apis/test/: build_test.dart
dart/ids-apis/: pubspec.yaml
deploy/: publish-go.yaml
go/kdo/v1/: arbitrage.pb.go  arbitrage.pb.gw.go  arbitrage_grpc.pb.go  arbitrage_grpc_mock.pb.go  auto_amend.pb.go  auto_amend.pb.gw.go  auto_amend_grpc.pb.go  auto_amend_grpc_mock.pb.go  basket.pb.go  basket.pb.gw.go  basket_grpc.pb.go  basket_grpc_mock.pb.go  (+101 more)
rust/: Cargo.toml  REFLECTION.md  lib.rs  log_sync.v1.pnl.rs  log_sync.v1.pnl.tonic.rs
rust/src/: kdo.v1.arbitrage.rs  kdo.v1.arbitrage.serde.rs  kdo.v1.arbitrage.tonic.rs  kdo.v1.auto_amend.rs  kdo.v1.auto_amend.serde.rs  kdo.v1.auto_amend.tonic.rs  kdo.v1.basket.rs  kdo.v1.basket.serde.rs  kdo.v1.basket.tonic.rs  kdo.v1.common.rs  kdo.v1.common.serde.rs  kdo.v1.etf.rs  kdo.v1.etf.serde.rs  kdo.v1.etf.tonic.rs  kdo.v1.fund.rs  kdo.v1.fund.serde.rs  kdo.v1.fund.tonic.rs  kdo.v1.future.rs  kdo.v1.future.serde.rs  kdo.v1.future.tonic.rs  kdo.v1.futures_lp.rs  kdo.v1.futures_lp.serde.rs  kdo.v1.futures_lp.tonic.rs  kdo.v1.hedge.rs  kdo.v1.hedge.serde.rs  kdo.v1.hedge.tonic.rs  kdo.v1.inventory.rs  kdo.v1.inventory.serde.rs  kdo.v1.inventory.tonic.rs  kdo.v1.lead_lag.rs  kdo.v1.lead_lag.serde.rs  kdo.v1.lead_lag.tonic.rs  kdo.v1.lead_lag_v2.rs  kdo.v1.lead_lag_v2.serde.rs  kdo.v1.lead_lag_v2.tonic.rs  kdo.v1.lp.rs  kdo.v1.lp.serde.rs  kdo.v1.lp.tonic.rs  kdo.v1.market.rs  kdo.v1.market.serde.rs  (+92 more)
(+421 files in other folders)
