[package]
name = "ids-apis"
version = "0.1.0"
edition = "2021"
description = "Meritz IDS APIs in Rust"
license = "MIT"  # 또는 원하는 라이센스

[lib]
name = "ids_apis"
path = "src/lib.rs"

[dependencies]
# neoeinstein-tonic v0.4.1과 호환되는 버전들
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Protobuf dependencies (v0.4.1 호환)
prost = "0.12"
prost-types = "0.12"
pbjson = "0.6"
pbjson-types = "0.6"

# gRPC dependencies (중요: tonic 0.10)
tonic = { version = "0.10", features = ["transport"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
http = "0.2"  # 중요: 1.0이 아닌 0.2
tower = "0.4"
async-trait = "0.1"

