[package]
name = "ids-apis"
version = "0.1.0"
edition = "2021"
description = "Meritz IDS APIs in Rust"
license = "MIT"

[lib]
name = "ids_apis"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

prost = "0.12"
prost-types = "0.12"
pbjson = "0.6"
pbjson-types = "0.6"

tonic = { version = "0.11", features = ["transport"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
http = "0.2" 
tower = "0.4"
async-trait = "0.1"

