[package]
name = "ids-apis"
version = "1.0.6"
edition = "2021"
description = "IDS APIs in Rust"
license = "MIT"

[lib]
name = "ids_apis"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

prost = "0.13"
prost-types = "0.13"

pbjson = "0.7.0"
pbjson-types = "0.7.0"

tonic = { version = "0.12", features = ["transport"] }
tonic-reflection = "0.12"
http = "1.3.1"
#tower = "0.4"
async-trait = "0.1"
